crates/excel-api-macros/tests/ui/fail/generated_symbol_collision.stderr
error[E0428]: the name `__excel_function_thunk_foo` is defined multiple times
 --> tests/ui/fail/generated_symbol_collision.rs:6:1
  |
3 | #[excel_function(name = "BAD.FOO", thunk = "bad_foo")]
  | ------------------------------------------------------ previous definition of the value `__excel_function_thunk_foo` here
...
6 | #[excel_function(name = "BAD.FOO.UPPER", thunk = "bad_foo_upper")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `__excel_function_thunk_foo` redefined here
  |
  = note: `__excel_function_thunk_foo` must be defined only once in the value namespace of this module
  = note: this error originates in the attribute macro `excel_function` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0428]: the name `__EXCEL_FUNCTION_METADATA_FOO` is defined multiple times
 --> tests/ui/fail/generated_symbol_collision.rs:6:1
  |
3 | #[excel_function(name = "BAD.FOO", thunk = "bad_foo")]
  | ------------------------------------------------------ previous definition of the value `__EXCEL_FUNCTION_METADATA_FOO` here
...
6 | #[excel_function(name = "BAD.FOO.UPPER", thunk = "bad_foo_upper")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `__EXCEL_FUNCTION_METADATA_FOO` redefined here
  |
  = note: `__EXCEL_FUNCTION_METADATA_FOO` must be defined only once in the value namespace of this module
  = note: this error originates in the attribute macro `excel_function` (in Nightly builds, run with -Z macro-backtrace for more info)
